Rename component class parameter
Signed-off-by: Geoffrey Biggs <gbiggs@killbots.net>

--- a/depthai_ros_driver/CMakeLists.txt
+++ b/depthai_ros_driver/CMakeLists.txt
@@ -63,7 +63,7 @@ add_subdirectory(${DEPTHAI_CORE} depthai-core)
 add_ros_node(depthai_ros_driver
   SKIP_PACKAGE_SEARCH
   PROJECT_NAME ${PROJECT_NAME}
-  COMPONENT_CLASS "rr::DepthAIBaseRos2"
+  ROS2_COMPONENT_CLASS "rr::DepthAIBaseRos2"
   SOURCES src/depthai_common.cpp
   ROS1_SOURCES src/depthai_base.cpp
   ROS2_SOURCES src/depthai_base_ros2.cpp
