--- a/depthai_ros_msgs/CMakeLists.txt
+++ b/depthai_ros_msgs/CMakeLists.txt
@@ -12,7 +12,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
 endif()
 
-include(cmake/ros_version_agnostic_add_messages.cmake)
+find_package(depthai_cmake REQUIRED)
 
 add_ros_messages(
   PROJECT_NAME ${PROJECT_NAME}
