--- a/depthai_cmake/depthai_cmake_macros.cmake.in
+++ b/depthai_cmake/depthai_cmake_macros.cmake.in
@@ -12,8 +12,64 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-macro(find_dependent_packages)
+macro(add_ros_messages)
+  cmake_parse_arguments(_ARG
+    ""
+    "PROJECT_NAME"
+    "MESSAGES;SERVICES;PKG_DEPS"
+    ${ARGN})
+  if(_ARG_UNPARSED_ARGUMENTS)
+    message(FATAL_ERROR
+      "add_ros_messages() called with unused arguments: '"
+      "${_ARG_UNPARSED_ARGUMENTS}'")
+  endif()
+
   if($ENV{ROS_VERSION} STREQUAL 1)
+    message(STATUS "Compiling ${PROJECT_NAME} as ROS 1")
+
+    find_package(catkin REQUIRED COMPONENTS message_generation ${_ARG_PKG_DEPS})
+
+    if(NOT "${_ARG_MESSAGES}" STREQUAL "")
+      add_message_files(FILES ${_ARG_MESSAGES})
+    endif()
+
+    if(NOT "${_ARG_SERVICES}" STREQUAL "")
+      add_service_files(FILES ${_ARG_SERVICES})
+    endif()
+
+    generate_messages(DEPENDENCIES ${_ARG_PKG_DEPS})
+
+    catkin_package(CATKIN_DEPENDS message_runtime ${_ARG_PKG_DEPS})
+  else()
+    message(STATUS "Compiling ${PROJECT_NAME} as ROS 2")
+
+    find_package(builtin_interfaces REQUIRED)
+    find_package(rosidl_default_generators REQUIRED)
+    foreach(pkg_dep ${_ARG_PKG_DEPS})
+      find_package(${pkg_dep} REQUIRED)
+    endforeach()
+
+    set(message_files "")
+    foreach(message ${_ARG_MESSAGES})
+      set(message_files "msg/${message};${message_files}")
+    endforeach()
+    set(service_files "")
+    foreach(service ${_ARG_SERVICES})
+      set(service_files "srv/${service};${service_files}")
+    endforeach()
+
+    rosidl_generate_interfaces(${_ARG_PROJECT_NAME} ${service_files} ${message_files}
+      DEPENDENCIES builtin_interfaces ${_ARG_PKG_DEPS}
+      ADD_LINTER_TESTS
+    )
+
+    ament_export_dependencies(rosidl_default_runtime)
+    ament_package()
+  endif()
+endmacro()
+
+macro(find_dependent_packages)
+  if("$ENV{ROS_VERSION}" STREQUAL 1)
     find_package(catkin REQUIRED COMPONENTS ${ARGN})
   else()
     find_package(ament_cmake REQUIRED)
@@ -35,7 +91,7 @@ macro(add_ros_node name)
       "${_ARG_UNPARSED_ARGUMENTS}'")
   endif()
 
-  if($ENV{ROS_VERSION} STREQUAL 1)
+  if("$ENV{ROS_VERSION}" STREQUAL 1)
     message(STATUS "Compiling ${name} as ROS 1")
 
     if(NOT ${SKIP_PACKAGE_SEARCH})
@@ -139,3 +195,4 @@ macro(add_ros_node name)
     set(${name}_PACKAGE_SHARE_DESTINATION share/${PROJECT_NAME})
   endif()
 endmacro()
+
